# spop_db_kontaktow

spop/: spop.cabal  spop.lkshs  spop.lkshw
spop/src/: Functions.hs  Group.hs  Hibernate.hs  Main.hs
src/: DataBase.hs  Person.hs
